fixed spacing

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -869,9 +869,9 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 }
 /* ---------------------------------- Dice Pool */
 
-.sheet-dice_pool-grid {
+div.sheet-dice_pool-grid {
   display: grid;
-  grid-template-columns: 6em 7em 6em;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-column-gap: 2px;
   grid-row-gap: 2px;
@@ -919,9 +919,13 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 }
 
 /* ---------------------------------- Skills */
+div.sheet-skills-grid {
+
+}
+
 .sheet-skills-grid > span {
   display: grid;
-  grid-template-columns: 12em 3em 2em 0.75em 2em;
+  grid-template-columns: 5fr 2fr 1fr 0.5fr 1fr;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 1px 0 1px 0;
@@ -962,7 +966,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 .sheet-armor-container {
   display: grid;
-  grid-template-columns: 1.5fr 1fr;
+  grid-template-columns: 1.5fr;
   grid-column-gap: 10px;
   padding-bottom: 2px;
 }
